# SNemoSimulation

./: .clang-format  CMakeLists.txt  README.md
SNemoSimulation/: base_physics_constructor.cc  base_physics_constructor.h  biasing_manager.cc  biasing_manager.h  data_libraries.h.in  detector_construction.cc  detector_construction.h  electromagnetic_field.cc  electromagnetic_field.h  em_field_equation_of_motion.cc  em_field_equation_of_motion.h  em_field_g4_stuff.cc  em_field_g4_stuff.h  em_field_g4_utils.h  em_physics_constructor.cc  em_physics_constructor.h  event_action.cc  event_action.h  g4_prng.cc  g4_prng.h  loggable_support.cc  loggable_support.h  magnetic_field.cc  magnetic_field.h  manager.cc  manager.h  manager_parameters.cc  manager_parameters.h  neutrons_physics_constructor.cc  neutrons_physics_constructor.h  particles_physics_constructor.cc  particles_physics_constructor.h  physics_list.cc  physics_list.h  physics_list_utils.cc  physics_list_utils.h  primary_generator.cc  primary_generator.h  region_tools.cc  region_tools.h  (+20 more)
SNemoSimulation/dpp/: SNemoSimulationModule.cc  SNemoSimulationModule.h
SNemoSimulation/processes/: em_extra_models.cc  em_extra_models.h  em_model_factory.cc  em_model_factory.h  utils.cc  utils.h
